[package]
name = "nano-id"
version = "0.2.1"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "A tiny, secure, URL-friendly, unique string ID generator for Rust"
documentation = "https://docs.rs/nano-id"
keywords = ["uuid", "random", "id", "url"]
repository = "https://github.com/viz-rs/nano-id"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[features]
default = ["base64"]

base64 = []
base62 = []
base58 = []

[dependencies]
getrandom = "0.2.6"
