[package]
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "A tiny, secure, URL-friendly, unique string ID generator for Rust"
documentation = "https://docs.rs/nano-id"
edition = "2021"
keywords = ["uuid", "random", "id", "url"]
license = "MIT OR Apache-2.0"
name = "nano-id"
readme = "README.md"
repository = "https://github.com/viz-rs/nano-id"
version = "0.2.1"

[features]
wasm = ["getrandom/js"]

default = ["base64"]

base58 = []
base62 = []
base64 = []

[dependencies]
getrandom = "0.2.6"
